; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_descriptor.c__arraydescr_from_ctypes_type.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_descriptor.c__arraydescr_from_ctypes_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"numpy.core._dtype_ctypes\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"dtype_from_ctypes_type\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"O\00", align 1
@PyArrayDescr_Type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @_arraydescr_from_ctypes_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @_arraydescr_from_ctypes_type(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = call i32* @PyImport_ImportModule(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %29

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32* @PyObject_CallMethod(i32* %11, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32* %12)
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @Py_DECREF(i32* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %10
  store i32* null, i32** %2, align 8
  br label %29

19:                                               ; preds = %10
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @PyObject_TypeCheck(i32* %20, i32* @PyArrayDescr_Type)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %19
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @Py_DECREF(i32* %24)
  %26 = call i32 (...) @PyErr_BadInternalCall()
  store i32* null, i32** %2, align 8
  br label %29

27:                                               ; preds = %19
  %28 = load i32*, i32** %5, align 8
  store i32* %28, i32** %2, align 8
  br label %29

29:                                               ; preds = %27, %23, %18, %9
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local i32* @PyImport_ImportModule(i8*) #1

declare dso_local i32* @PyObject_CallMethod(i32*, i8*, i8*, i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32 @PyObject_TypeCheck(i32*, i32*) #1

declare dso_local i32 @PyErr_BadInternalCall(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
